--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 dependencies = [
   "click>=8.1.3,<9",
   "mollie-api-python>=3.0.0rc1,<4",
+  "tabulate>=0.9.0",
 ]
 dynamic = ["version"]
 
