--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ description = 'Simple commandline client for Mollie'
 readme = "README.md"
 requires-python = ">=3.7"
 license = "MIT"
-keywords = []
+keywords = [
+  "mollie",
+  "payments",
+  "cli",
+]
 authors = [
   { name = "Tom Hendrikx", email = "tom@whyscream.net" },
 ]
@@ -65,4 +69,9 @@ exclude_lines = [
   "no cov",
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
+]
+
+[tool.hatch.build]
+include = [
+  "mollie_cli/",
 ]
